--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
   </head>  
   <body>
     <h1>Hello, World!</h1>
+    <h2>Team members: </h2>
+    <h3>Omar</h3>
+    <h3>Hadi</h3>
   </body>
 </html>
