--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+a<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Hello, World!</title>
@@ -15,5 +15,6 @@
     <h2>Team members: </h2>
     <h3>Omar</h3>
     <h3>Hadi</h3>
+     <a href="welcome.html">welcome page</a>
   </body>
 </html>
